Fix sidebar overlapping modals

--- a/src/styles/layouts/_sidebar.scss
+++ b/src/styles/layouts/_sidebar.scss
@@ -14,7 +14,7 @@
   transform: translateX(-100%);
   transition: transform 0.15s;
   overflow: hidden;
-  z-index: 100;
+  z-index: 1;
 
   &--active {
     position: initial;
